tests/snapshots/test_runner__tests__compiler__typecheck__shorthand_function_call_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let foo<A>
  : | A A => [A]
  = | x y => [x y]

let match<A B>
  : | A | A => B => B
  = | x f => x.f()

do "hello".match(|.foo(2)).print()

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/shorthand_function_call_1.kk:9:24
  │
9 │ do "hello".match(|.foo(2)).print()
  │                        ^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - String      | + Integer   |
    +---------------+-------------+
